# Capstone-in-Operations-Research

./: .env.example  .gitignore  README.md  capstone_explained.html  matplotlibrc  pyproject.toml  requirements-lock.txt
deck/: capstone_defense.pptx
docs/: DEPRECATED.md  HANDOFF.md  body_restructure_packet.md  correlation_findings.md  decisions.md  explainer.html  implementation_packet.md  pivot_plan.md  progress_note_v13.md  progress_note_v14.md  progress_note_v15.md  progress_note_v16.md  progress_report_2026-06-06.html  proposal_transfer_channel.md  research_roadmap.md  stratified_results.txt  thesis_change_map.md  thesis_split.md
full_thesis/: full_thesis.tex
poster/: build_v23.js  build_v24.js  design-system.css  poster.html  poster_capstone_v23.pptx  poster_capstone_v24.pptx
results/: es_pt_fr_regimes_2026-06-05_ar1_R1_lean.pkl  es_pt_fr_regimes_2026-06-05_ar1_R2_full.pkl  es_pt_fr_regimes_2026-06-05_lw_R2_full.pkl  es_pt_fr_regimes_2026-06-05_seasonal_R1_lean.csv  iberia_regimes_2026-06-05.pkl  iberia_regimes_2026-06-05_ar1_R1_lean.csv  iberia_regimes_2026-06-05_lw_R1_lean.csv  iberia_regimes_2026-06-05_lw_R1_lean.pkl  iberia_regimes_2026-06-05_seasonal_R1_lean.pkl  iberia_regimes_2026-06-05_seasonal_R2_full.csv  iberia_regimes_2026-06-05_seasonal_R2_full.pkl  shuffled_marginals_2026-05-25.csv  shuffled_marginals_2026-06-02.csv  taskA_regimes_2026-06-02.csv  taskA_regimes_2026-06-02.pkl  taskA_regimes_2026-06-02_ar1_R1_lean.csv  taskA_regimes_2026-06-02_ar1_R1_lean.pkl  taskA_regimes_2026-06-02_ar1_R2_full.pkl  taskA_regimes_2026-06-02_lw_R1_lean.pkl  (+5 more)
(+206 files in other folders)
